fix categorical histogram alignment in single view

--- a/gpfjs/src/app/categorical-histogram/categorical-histogram.component.css
+++ b/gpfjs/src/app/categorical-histogram/categorical-histogram.component.css
@@ -2,7 +2,7 @@
   position: absolute;
   left: 0;
   right: 0;
-  bottom: -8px;
+  bottom: -3px;
   margin: auto;
   display: flex;
   justify-content: space-between;
@@ -11,11 +11,6 @@
   font-size: 14px;
   width: 100%;
   max-width: 600px;
-}
-
-.histogram svg {
-  width: 100%;
-  height: 100%;
 }
 
 .values-count-text {
